# frp_trading_system

./: README.md
cpp/: CMakeLists.txt
cpp/include/: bindings.hpp  execution_engine.hpp
cpp/src/: bindings.cpp  execution_engine.cpp
cpp/test/: test_execution.cpp
ocaml/: dune-project
ocaml/src/: bindings.ml  dune  frp.ml  strategy_dsl.ml
ocaml/test/: dune  test_execution.ml  test_frp.ml
